@startuml

class MessageStore {
    -from_graph(&FactorGraph): MessageStore
    -variable_in(VariableId): &[MessageId]
    -variable_out(VariableId): &[MessageId]
    -factor_in(FactorId): &[MessageId]
    -factor_out(FactorId): &[MessageId]
}

class Message {
    -into_factor(): FactorKind
}

class DirectedEdge

class MessageId

class VariableId

class FactorId

MessageStore o-- "0..*" Message
MessageStore o-- "0..*" DirectedEdge

MessageStore ..> MessageId

DirectedEdge ..> VariableId
DirectedEdge ..> FactorId

@enduml